external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akash-app-service
spec:
  selector:
    app: akash-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31000
